[package]
name = "cargo-bisect-rustc-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
chrono = { version = "0.4.22", features = ["serde"] }
color-eyre = "0.6.2"
rusqlite = { version = "0.28.0", features = ["bundled", "uuid"] }
serde = { version = "1.0.145", features = ["derive"] }
tempdir = "0.3.7"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
